# prrr_gql

./: .example.env  Cargo.toml
migrations/2019-04-09-131202_create_cats/: up.sql
migrations/2019-04-09-131208_create_birds/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
